plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.suhsaechan'
version = '1.0.14'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    // Suh-Nexus (.me 도메인 DNS 소멸로 .kr로 전환 — 동일 Nexus 인스턴스)
    maven {url "https://nexus.suhsaechan.kr/repository/maven-releases/"
    }
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    // 컨텍스트 로딩 테스트가 운영 DB 없이도 돌도록 인메모리 DB 사용
    testRuntimeOnly 'com.h2database:h2'

    // Swagger/OpenAPI (Spring Boot 3.4.x 호환 버전)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql:42.7.3'   // 버전은 최신 안정판으로

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Prometheus & Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // Suh Libraries - API로 제공
    implementation 'me.suhsaechan:suh-random-engine:1.1.0'
    implementation 'me.suhsaechan:suh-logger:1.3.11'
    implementation 'me.suhsaechan:suh-api-log:1.1.5'
}

tasks.named('test') {
    useJUnitPlatform()
}

// JAR 파일 이름을 고정시키기 위한 설정
jar {
    enabled = false  // plain jar 생성 비활성화
    archiveClassifier = ''  // classifier 제거
}

bootJar {
    archiveFileName = 'app.jar'  // 항상 app.jar로 생성
    archiveClassifier = ''  // classifier 제거하여 버전 정보 포함되지 않도록 함
}
